Fixed  misalignment in comments

--- a/app/src/main/res/css/modules/comments.sass
+++ b/app/src/main/res/css/modules/comments.sass
@@ -28,8 +28,12 @@
   transition: all 0.2s ease
   margin-right: 0.5rem
   .top_container
-    padding: 1rem
+  .details
+    p
+      padding: 0px
   p
     white-space: pre-wrap
+    padding: 1rem
+    margin: 0px
   img
     width: 100%
